examples/test/testpolicy13317.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13317
  namespace: namespace106
spec:
  podSelector:
    matchLabels:
      key25: value4
      key3: value28
      key23: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value39
          key27: value42
          key46: value38
      podSelector:
        matchLabels:
          key35: value5
          key46: value7
          key27: value32
